2004-12-14  P.J. Darcy  <darcypj@us.ibm.com>

	* configure.tgt: Add s390x-ibm-tpf support.

2004-12-16  Martin Kögler  <mkoegler@auto.tuwien.ac.at>

	* ldmisc.c (vfinfo): Handle the case where %B is passed a NULL
	BFD.

2004-12-07  Ben Elliston  <bje@gnu.org>

	* ldemul.h: Forward declare struct option.

2004-12-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* scripttempl/pe.sc (.data): Add .jcr subsection.

2004-11-30  Paul Brook  <paul@codesourcery.com>

	* emultempl/armelf.em: Ignore -p and -no-pipeline-knowledge.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-11-26  Melissa Mears  <asterisk@graces.dricas.com>

	* emultempl/pe.em: Add --subsystem:xbox as well as
	--subsystem:%d.
	* ld.texinfo: (ld_options): Document acceptance of subsystem xbox
	and numeric subsystems.

2004-11-24  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (fold_name): Correct PR 338 fix.

2004-11-19  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.am (ALL_EMULATIONS): Add earmelf_linux_eabi.o.
	(earmelf_linux_eabi.c): New target.
	* configure.tgt (arm*-*-linux-gnueabi): Handle it.
	* emulparams/armelf_linux_eabi.sh: New file.
	* Makefile.in: Regenerated.

2004-11-19  Nick Clifton  <nickc@redhat.com>

	PR 518
	* ld.texinfo (MEMORY): Update the descriptions of the ORIGIN and
	LENGTH fields in the MEMORY command, to explicitly state that
	symbols cannot be used in their expressions.

2004-11-19  Jon Beniston <jon@beniston.com>

	* ld/ldlex.l: Allow ORIGIN and LENGTH in EXPRESSION.
	* ld/ldgram.y: Add ORIGIN and LENGTH expressions.
	* ld/ldexp.c (fold_name): Implement LENGTH() and ORIGIN() functions 
	which return the length and origin of a memory.
	* ld/ld.texinfo: Document LENGTH() and ORIGIN() functions.
	* NEWS: Mention support for ORIGIN and LENGTH operators.

2004-11-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* emultempl/armelf.em (arm_elf_set_bfd_for_interworking): Don't use